--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
           </div>
         </div>
         <div class="cta-row">
-          <a class="primary-btn" href="mailto:info@schiblerelectric.se?subject=Offertförfrågan">Skicka förfrågan</a>
+          <a class="primary-btn" href="mailto:info@schiblerelectric.se?subject=Offertförfrågan">Maila</a>
           <a class="ghost-btn" href="tel:+46850702700">Ring direkt</a>
         </div>
       </div>
